[gd_scene load_steps=5 format=3 uid="uid://bhfhqwlqdj6ki"]

[ext_resource type="Script" uid="uid://d12t50i0x6eeg" path="res://_globals/gui/game_menu/inventory_item_button.gd" id="2_a5s1n"]
[ext_resource type="FontFile" uid="uid://ct1o26rpsdb2" path="res://_assets/fonts/pixel-loot.ttf" id="2_dpp3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5t42"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l8ib"]
draw_center = false
corner_detail = 1

[node name="InventoryItemButton" type="PanelContainer"]
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5t42")
script = ExtResource("2_a5s1n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = -2
theme_override_constants/margin_bottom = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ItemButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_dpp3w")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_3l8ib")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3l8ib")
theme_override_styles/hover = SubResource("StyleBoxFlat_3l8ib")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3l8ib")
theme_override_styles/focus = SubResource("StyleBoxFlat_3l8ib")
toggle_mode = true
text = "Apple"
alignment = 0

[node name="ItemQtyLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_dpp3w")
theme_override_font_sizes/font_size = 8
text = "25"
